--- a/org/bioconductor/templates/server_tags/post_body.html
+++ b/org/bioconductor/templates/server_tags/post_body.html
@@ -51,7 +51,7 @@
                 {% if post.is_toplevel %}
                     <div class="tags clearfix" style="margin-bottom:0.5em;">
                         {% for tag in post.tag_set.all %}
-                            <a class="tag" href="/t/{{ tag.name }}/">{{ tag.name }}</a>
+                            <a class="tag btn btn-tag" href="/t/{{ tag.name }}/">{{ tag.name }}</a>
                         {% endfor %}
 
                     &bull; {{ post.root.view_count|bignum }} vistas
