--- a/org/bioconductor/templates/starbase.html
+++ b/org/bioconductor/templates/starbase.html
@@ -25,6 +25,7 @@
             <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}lib/prism/prism.css">
             <link href="{{ STATIC_URL }}lib/select2-3.4.5/select2.css" rel="stylesheet">
             <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}{{ SITE_STYLE_CSS }}">
+            <link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}wdg.less">
         {% endcompress %}
 
         {% compress js %}
@@ -39,7 +40,7 @@
         <link href="{{ STATIC_URL }}lib/select2-3.4.5/select2.css" rel="stylesheet">
 
         {# Random numbers added to bypass potential browser caching. #}
-        <link rel="stylesheet/less" type="text/less" href="{{ STATIC_URL }}{{ SITE_STYLE_CSS }}?x={% rand_num %}">
+        <link rel="stylesheet/less" type="text/less" href="{{ STATIC_URL }}{{ SITE_STYLE_CSS }}?x={% rand_num %}"><link rel="stylesheet" type="text/less" href="{{ STATIC_URL }}wdg.less?x={% rand_num %}">
         <script src="{{ STATIC_URL }}lib/less-1.6.1.min.js" type="text/javascript"></script>
 
         <script src="{{ STATIC_URL }}lib/prism/prism.js" type="text/javascript"></script>
