--- a/biostar/server/templates/pagedown_widget.html
+++ b/biostar/server/templates/pagedown_widget.html
@@ -2,7 +2,7 @@
     <div class="wmd-panel">
         <div id="wmd-button-bar"></div>
          <textarea class="wmd-input" id="wmd-input" name="content" rows="{{ rows }}"
-                   placeholder="Type your post here">{{ value }}</textarea>
+                   placeholder="Escribe tu post aquí">{{ value }}</textarea>
     </div>
 </div>
 
