--- a/org/bioconductor/templates/account/login.html
+++ b/org/bioconductor/templates/account/login.html
@@ -65,8 +65,8 @@
 
                         <button type="submit" class="btn btn-success">Iniciar sesión &raquo;</button>
 
-                        <span class="btn btn-default pull-right">
-                            <a class="button" href="{% url 'account_reset_password' %}">¿Olvidaste tu contraseña? &raquo;</a>
+                        <span class="">
+                            <a class="btn btn-default pull-right" href="{% url 'account_reset_password' %}">¿Olvidaste tu contraseña? &raquo;</a>
                         </span>
 
                     </form>
