--- a/org/bioconductor/templates/account/password_reset.html
+++ b/org/bioconductor/templates/account/password_reset.html
@@ -19,8 +19,8 @@
                 {% csrf_token %}
                 {{ form|crispy }}
                  <button type="submit" class="btn btn-success">Resetear contraseña &raquo;</button>
-                 <span class="btn btn-default pull-right">
-                    <a class="button" href="{% url 'account_login' %}">Volver a iniciar sesión &raquo;</a>
+                 <span class="">
+                    <a class="btn btn-default pull-right" href="{% url 'account_login' %}">Volver a iniciar sesión &raquo;</a>
                 </span>
             </form>
         </div>
