--- a/org/bioconductor/templates/account/signup.html
+++ b/org/bioconductor/templates/account/signup.html
@@ -56,8 +56,8 @@
                         <div>
                             <button type="submit" class="btn btn-success">Registrarse &raquo;</button>
 
-                            <span class="btn btn-default pull-right">
-                                <a class="button" href="{% url 'account_login' %}">Iniciar sesión &raquo;</a>
+                            <span class="">
+                                <a class="btn btn-default pull-right" href="{% url 'account_login' %}">Iniciar sesión &raquo;</a>
                             </span>
                         </div>
 
