--- a/org/bioconductor/templates/message_list.html
+++ b/org/bioconductor/templates/message_list.html
@@ -22,8 +22,12 @@
         </div>
 
         <div class="col-md-3 sidebar">
-            <div class="head">Mensajes de</div>
-            {% sidebar_users people %}
+            <div class="panel panel-warning">
+                <div class="panel-heading">Mensajes de</div>
+                <div class="panel-body">
+                    {% sidebar_users people %}      
+                </div>
+            </div>
         </div>
     </div>
 
