--- a/org/bioconductor/templates/socialaccount/signup.html
+++ b/org/bioconductor/templates/socialaccount/signup.html
@@ -23,7 +23,7 @@
                         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}"/>
                     {% endif %}
                     <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-                <span class="btn btn-default pull-right"><a class="button secondaryAction"
+                <span class=""><a class="btn btn-default pull-right button secondaryAction"
                                                             href="{% url 'account_reset_password' %}">¿Olvidaste tu contraseña?</a></span>
                 </form>
 
