--- a/org/bioconductor/static/wdg.less
+++ b/org/bioconductor/static/wdg.less
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css?family=Raleway:400,700");
+@import "biostar.style.less";
+//@import url("https://fonts.googleapis.com/css?family=Raleway:400,700");
 
 @color0: #f38630; // Appears 3 times
 @color1: #69d2e7; // Appears 3 times
@@ -10,10 +11,10 @@
 
 
 
-body {
+/*body {
     color: #6f6f6f;
-    font: normal 14px/1.2em Raleway, sans-serif;
-}
+    font: normal 14px/1.2em Raleway, sans-serif !important;
+}*/
 article {
     padding: 0 0 20px 0;
 }
@@ -88,6 +89,7 @@ article {
 .btn-tag {
     background-color: @color5;
     color: #5a5b51;
+    font-size: 90%;
     &:hover {
         background-color: @color4;
     }
@@ -95,6 +97,7 @@ article {
         background-color: @color4;
     }
 }
+
 .btn-badge {
     background-color: #fffeb2;
     box-shadow: 1px 1px 2px rgba(0,0,0,0.4);
@@ -111,8 +114,10 @@ article {
 hr.hr {
     border-color: @color5;
 }
-.pregunta-titulo {
+.post-title {
     color: #000000;
+    font-weight: normal !important;
+    //font-family: Raleway, sans-serif !important;
 }
 .contenido {
     font-size: 14px;
@@ -132,4 +137,19 @@ hr.hr {
 }
 .badge1 {
     color: #ffcc00;
+}
+
+
+.content {
+  min-height: 8em;
+  overflow: auto;
+  padding-left: 10px;
+}
+
+.post-row .post-title a {
+    padding-left: 5px
+}
+
+.mark {
+    background:none;
 }
