--- a/org/bioconductor/templates/server_tags/page_bar.html
+++ b/org/bioconductor/templates/server_tags/page_bar.html
@@ -11,14 +11,14 @@
         {% endif %}
 
             <span class="current">
-              &bull; {{ page_obj.paginator.count|intcomma }} results &bull;
-                página {{ page_obj.number }} of {{ page_obj.paginator.num_pages }} &bull;
+              &bull; {{ page_obj.paginator.count|intcomma }} resultados &bull;
+                página {{ page_obj.number }} de {{ page_obj.paginator.num_pages }} &bull;
         </span>
 
             {% if page_obj.has_next %}
                 <a href="?page={{ page_obj.next_page_number }}&sort={{ sort }}&limit={{ limit }}&q={{ q }}">sig &gt;</a>
             {% else %}
-                next &gt;
+                sig &gt;
             {% endif %}
         </span>
 </div>
