--- a/org/bioconductor/templates/server_tags/post_actions.html
+++ b/org/bioconductor/templates/server_tags/post_actions.html
@@ -1,8 +1,11 @@
 {% load server_tags %}
 {% load humanize %}
 <div class="post-action">
-
-    <span class="label label-default add-comment" data-value="{{ post.id }}" id="C{{ post.id }}">AÑADIR {{ label }}</span>
+    {% if label == 'COMMENT' %}
+    <span class="label label-default add-comment" data-value="{{ post.id }}" id="C{{ post.id }}">AÑADIR COMENTARIO</span>
+    {% else %}
+    <span class="label label-default add-comment" data-value="{{ post.id }}" id="C{{ post.id }}">AÑADIR RESPUESTA</span>
+    {% endif %}
 
     &bull; <a href="{{ post.get_absolute_url }}">enlace</a>
     {% if post.is_editable %}
