--- a/org/bioconductor/templates/server_tags/post_body.html
+++ b/org/bioconductor/templates/server_tags/post_body.html
@@ -15,19 +15,19 @@
 
 
         <div class="vote mark {{ post.has_upvote|on }} tip" data-toggle="tooltip" data-placement="top"
-             data-type="vote" title="Upvote!">
+             data-type="vote" title="¡Votar!">
             <i class="fa fa-thumbs-o-up fa-2x"></i></div>
 
         <div class="count" itemprop="voteCount">{{ post.vote_count }}</div>
 
         <div class="vote mark {{ post.has_bookmark|on }} tip" data-toggle="tooltip" data-placement="top"
-             data-type="bookmark" title="Bookmark!">
+             data-type="bookmark" title="¡Marcar como favorito!">
             <i class="fa fa-book fa-2x"></i>
         </div>
 
         {% if not post.is_toplevel and post.can_accept %}
             <div class="vote mark {{ post.has_accepted|on }} tip" data-toggle="tooltip" data-placement="top"
-                 data-type="accept" title="Accept!">
+                 data-type="accept" title="¡Aceptar!">
                 <i class="fa fa-check-circle-o fa-2x"></i>
             </div>
         {% endif %}
@@ -40,7 +40,7 @@
 
         <a name="{{ post.id }}"></a>
         {# The body of the post #}
-        <div class="content" >
+        <div class="content" >vota
 
             {% post_user_box post.author post.creation_date %}
 
