--- a/org/bioconductor/templates/server_tags/post_count_box.html
+++ b/org/bioconductor/templates/server_tags/post_count_box.html
@@ -34,7 +34,7 @@
     <div class="count-box-sm visible-sm visible-xs">
         <div class="box {% boxclass post.root %}">
             <div class="c">{{ post.root.reply_count }}</div>
-            <div class="t">respuestas{{ post.reply_count|pluralize }}</div>
+            <div class="t">resp{{ post.reply_count|pluralize }}</div>
         </div>
     </div>
 
