--- a/org/bioconductor/templates/server_tags/sidebar_users.html
+++ b/org/bioconductor/templates/server_tags/sidebar_users.html
@@ -1,10 +1,10 @@
 {% load cache %}
 {% load server_tags %}
 
-<div class="recent-posts">
-    <ul>
+<div class="panel panel-info">
+    <ul class="list-group">
         {% for user in users %}
-            <li >
+            <li class="list-group-item">
                 {%  gravatar user 35 %} &nbsp; {%  userlink user %}
             </li>
         {% endfor %}
